# Esercitazioni_PCS_2026

./: test0.txt
esercitazione1/: CMakeLists.txt  media  medie.cpp  parametri_es1.cpp  prog  prova2.txt
esercitazione1/build_es1/: CMakeCache.txt  Makefile  medie_cmake
esercitazione2/: CMakeLists.txt  codice_esercitazione2.cpp  es2  es2.cpp
esercitazione2/build_es2/: CMakeCache.txt  Makefile  cmake_install.cmake  prog_cmake
esercitazione3/: CMakeLists.txt  es3.cpp  implementazione_classe_rational.hpp  prog  vec2.cpp
esercitazione3/build_es3/: CMakeCache.txt  (+2 more)
esercitazione4/: CMakeLists.txt  algoritmi_ordinamento.hpp  dati_alg.txt  dati_algBubble.txt  dati_algInsertion.txt  dati_algSelection.txt  dati_funz.txt  estrapolazione_tempi.cpp  tempi  testBubble  testInsertion  testSelection  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
esercitazione4/build_es4/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  dati_algBubble.txt  dati_algInsertion.txt  dati_algSelection.txt  dati_funz.txt  estrapolazione_tempi  test_bubblesort  test_insertionsort  test_selectionsort
esercitazione5/: CMakeLists.txt  algoritmo_ordinamento.hpp  bubblesort  es5  es5.cpp  esempio_timecounter.cpp  insertionsort  mergesort  osservazioni.txt  quick  quickottimizzato  quicksort  selectionsort  test_bubblesort.cpp  test_insertionsort.cpp  test_mergesort.cpp  test_quickottimizzato.cpp  test_quicksort.cpp  test_selectionsort.cpp  verifica_ordine.hpp
esercitazione5/build_debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  algoritmo_ordinamento  cmake_install.cmake  dati_algBubble.txt  dati_algInsertion.txt  dati_algMergeSort.txt  dati_algQuick.txt  dati_algSelection.txt  dati_funz.txt  test_bubblesort  test_insertionsort  test_mergesort  test_quickottimizzato  test_quicksort  test_selectionsort
esercitazione5/build_release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  algoritmo_ordinamento  cmake_install.cmake  dati_algBubble.txt  dati_algInsertion.txt  dati_algMergeSort.txt  dati_algQuick.txt  dati_algSelection.txt  dati_funz.txt  test_bubblesort  test_insertionsort  test_mergesort  test_quickottimizzato  test_quicksort  test_selectionsort
